--- a/config/database.yml
+++ b/config/database.yml
@@ -18,7 +18,7 @@ development:
   adapter: mysql2
   encoding: utf8
   reconnect: false
-  database: jquery_mobile_development
+  database: bootstrap_development
   pool: 5
   username: root
   password:
@@ -31,7 +31,7 @@ test:
   adapter: mysql2
   encoding: utf8
   reconnect: false
-  database: jquery_mobile_test
+  database: bootstrap_test
   pool: 5
   username: root
   password:
@@ -41,9 +41,9 @@ production:
   adapter: mysql2
   encoding: utf8
   reconnect: false
-  database: jquery_mobile_production
+  database: bootstrap_production
   pool: 5
   username: root
   password: 
-  #socket: /tmp/mysql.sock
-  socket: /var/run/mysqld/mysqld.sock
+  socket: /tmp/mysql.sock
+  #socket: /var/run/mysqld/mysqld.sock
