--- a/config/database.yml
+++ b/config/database.yml
@@ -45,5 +45,5 @@ production:
   pool: 5
   username: root
   password: 
-  socket: /tmp/mysql.sock
-  #socket: /var/run/mysqld/mysqld.sock
+  #socket: /tmp/mysql.sock
+  socket: /var/run/mysqld/mysqld.sock
