--- a/config/database.yml
+++ b/config/database.yml
@@ -41,9 +41,9 @@ production:
   adapter: mysql2
   encoding: utf8
   reconnect: false
-  database: bootstrap_production
+  database: bootstrap-on-rails
   pool: 5
   username: root
   password: 
-  #socket: /tmp/mysql.sock
-  socket: /var/run/mysqld/mysqld.sock
+  socket: /tmp/mysql.sock
+  #socket: /var/run/mysqld/mysqld.sock
